# arcsar

./: .gitignore  README.md  pyproject.toml
src/arcsar/segmentation/: segment.py
src/utils/: frame_extraction.py
