[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcsar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
    "pandas",
    # sam3 requires notebooks extras because core imports depend on "optional" packages
    "sam3[notebooks]", 
]

[tool.setuptools.packages.find]
where = ["src"]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
sam3 = { path = "external/sam3", editable = true }